--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.32.0
-pandas==2.2.0
-python-dotenv==1.0.0
-langchain==0.1.9
-langchain-core==0.1.27
-langchain-openai==0.0.5
-langchain-groq==0.1.5
-openpyxl==3.1.2
-uuid==1.30
-datetime==5.4
-typing-extensions==4.9.0
+streamlit
+pandas
+python-dotenv
+langchain
+langchain-core
+langchain-openai
+langchain-groq
+openpyxl
+uuid
+datetime
+typing-extensions
